@@ -404,6 +404,8 @@ Major changes from 1.9.0-jumbo-1 (May 2019) in this bleeding-edge version:
   M1 (those are for the KeePass format with AES-KDF, which is extreme because
   all the heavy lifting is AES).  [magnum; 2024]
 
+- Add fvde2john.py to improve FileVault 2 hash extraction.  [holly-o; 2024]
+
 
 Major changes from 1.8.0-jumbo-1 (December 2014) to 1.9.0-jumbo-1 (May 2019):
 
